Add java 17 things