@@ -77,10 +77,3 @@ lazy val root = (project in file(".")).
 
   )
 
-javaOptions ++= Seq(
-  "base/java.lang", "base/java.lang.invoke", "base/java.lang.reflect", "base/java.io", "base/java.net", "base/java.nio",
-  "base/java.util", "base/java.util.concurrent", "base/java.util.concurrent.atomic",
-  "base/sun.nio.ch", "base/sun.nio.cs", "base/sun.security.action",
-  "base/sun.util.calendar", "security.jgss/sun.security.krb5",
-).map("--add-opens=java." + _ + "=ALL-UNNAMED")
-
